--- a/charts/argocd/values.yaml
+++ b/charts/argocd/values.yaml
@@ -53,7 +53,7 @@ probes:
         prometheus: main
       spec:
         prober:
-          url: '{{ .Values.global.svc.prometheus.blackbox }}:9115'
+          url: 'prometheus-{{ .Values.global.environment.name }}-prometheus-blackbox-exporter.prometheus.svc.cluster.local:9115'
         jobName: argocd
         module: http_2xx
         targets:
